--- a/estetica-landing-page/index.html
+++ b/estetica-landing-page/index.html
@@ -6,28 +6,74 @@
     <title>Estética Bella - Uñas y Accesorios</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Preconnect para fuentes (mejora FCP) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Font Awesome removido: usamos SVG inline para íconos más ligeros -->
 </head>
 <body>
+    <!-- SVG sprite: íconos inline para reducir dependencias externas -->
+    <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
+        <symbol id="icon-gem" viewBox="0 0 24 24">
+            <polygon points="12,2 15,8 22,9 17,13 19,20 12,16 5,20 7,13 2,9 9,8" />
+        </symbol>
+        <symbol id="icon-heart" viewBox="0 0 24 24">
+            <path d="M12 21s-7-4.35-9-7.2C-1 9.7 3 4 7.5 6.5 9 7.6 10 9 12 9s3-1.4 4.5-2.5C21 4 25 9.7 21 13.8 19 16.65 12 21 12 21z" />
+        </symbol>
+        <symbol id="icon-hand-heart" viewBox="0 0 24 24">
+            <path d="M2 12c0-3 4-6 9-6 2 0 4 .8 5 2.2V4h2v8h-2v-2c-1-1.5-3-2.2-5-2.2-4.5 0-9 3-9 6v2h-2v-2z" />
+        </symbol>
+        <symbol id="icon-paint-brush" viewBox="0 0 24 24">
+            <path d="M2 22c0-4 4-8 8-8l8-8 4 4-8 8c0 4-4 8-12 4z" />
+        </symbol>
+        <symbol id="icon-palette" viewBox="0 0 24 24">
+            <path d="M12 2C7 2 2 6 2 11c0 5 4 9 9 9 1.2 0 2.2-.9 2.2-2.1 0-.5-.4-1-.9-1-1.3 0-2.1-.8-2.1-2.1 0-2.5 2.6-4.6 5.9-4.6 1.2 0 2.2-.9 2.2-2.1C19.3 5 16 2 12 2z" />
+        </symbol>
+        <symbol id="icon-spa" viewBox="0 0 24 24">
+            <path d="M12 2C8 6 6 9 6 12c0 4 4 8 6 8s6-4 6-8c0-3-2-6-6-10z" />
+        </symbol>
+        <symbol id="icon-star" viewBox="0 0 24 24">
+            <path d="M12 2l3 7h7l-5.5 4.2L20 22l-8-5-8 5 1.5-8.8L0 9h7z" />
+        </symbol>
+        <symbol id="icon-phone" viewBox="0 0 24 24">
+            <path d="M6.6 10.8c1.9 3.6 4.8 6.5 8.4 8.4l2.2-2.2c.5-.5 1.1-.7 1.7-.6 1 .2 2.8.9 3.1 1.1.3.3.5.9.1 1.5l-2.2 2.8c-.5.6-1.7.9-2.6.9C9.8 22 2 14.2 2 5.9c0-.9.3-2.1.9-2.6L5.7 1.1C6.3.6 6.9.8 7.2 1.1c.3.3.9 2.1 1.1 3.1.1.6 0 1.2-.6 1.7L6.6 10.8z" />
+        </symbol>
+        <symbol id="icon-envelope" viewBox="0 0 24 24">
+            <path d="M2 4h20v16H2V4zm2 2v.5L12 13 20 6.5V6H4z" />
+        </symbol>
+        <symbol id="icon-map-marker" viewBox="0 0 24 24">
+            <path d="M12 2C8 2 5 5 5 9c0 6 7 13 7 13s7-7 7-13c0-4-3-7-7-7zm0 9.5A2.5 2.5 0 1 1 12 6a2.5 2.5 0 0 1 0 5.5z" />
+        </symbol>
+        <symbol id="icon-instagram" viewBox="0 0 24 24">
+            <rect x="3" y="3" width="18" height="18" rx="4" ry="4" />
+            <circle cx="12" cy="12" r="3" />
+        </symbol>
+        <symbol id="icon-facebook" viewBox="0 0 24 24">
+            <path d="M14 2h3v4h-3v3h-4V6H9v-4h3V2z" />
+        </symbol>
+        <symbol id="icon-tiktok" viewBox="0 0 24 24">
+            <path d="M9 2v7a4 4 0 0 0 4 4 6 6 0 0 0 6-6V2h-2v3a4 4 0 0 1-4 4 2 2 0 0 1-2-2V2H9z" />
+        </symbol>
+    </svg>
     <!-- Header -->
     <header id="header" class="header">
         <div class="container">
             <div class="logo">
-                <i class="fas fa-gem"></i>
+                <svg class="icon" aria-hidden="true"><use href="#icon-gem"></use></svg>
                 <span>Estética Bella</span>
             </div>
             <nav class="nav">
-                <ul class="nav-list">
+                <ul id="main-nav" class="nav-list" role="navigation" aria-label="Menú principal">
                     <li><a href="#hero" class="nav-link">Inicio</a></li>
                     <li><a href="#servicios" class="nav-link">Servicios</a></li>
                     <li><a href="#accesorios" class="nav-link">Accesorios</a></li>
                     <li><a href="#contacto" class="nav-link">Contacto</a></li>
                 </ul>
-                <div class="hamburger">
+                <button class="hamburger" type="button" aria-label="Abrir menú" aria-expanded="false" aria-controls="main-nav">
                     <span></span>
                     <span></span>
                     <span></span>
-                </div>
+                </button>
             </nav>
         </div>
     </header>
@@ -39,15 +85,15 @@
                 <h1 class="hero-title">Belleza que <span class="accent">Resplandece</span></h1>
                 <p class="hero-subtitle">Transformamos tus uñas y complementamos tu estilo con accesorios únicos. Descubre la elegancia en cada detalle.</p>
                 <div class="hero-buttons">
-                    <a href="#contacto" class="btn btn-primary">Reservar Turno</a>
+                        <a href="#contacto" class="btn btn-primary">Reservar Turno</a>
                     <a href="#servicios" class="btn btn-secondary">Conocer Más</a>
                 </div>
             </div>
             <div class="hero-image">
-                <div class="image-placeholder">
-                    <i class="fas fa-hand-holding-heart"></i>
-                    <p>Manicura Profesional</p>
-                </div>
+                    <div class="image-placeholder">
+                        <svg class="icon icon-large" aria-hidden="true"><use href="#icon-hand-heart"></use></svg>
+                        <p>Manicura Profesional</p>
+                    </div>
             </div>
         </div>
         <div class="hero-decoration">
@@ -65,16 +111,16 @@
             </div>
             <div class="servicios-grid">
                 <div class="servicio-card">
-                    <div class="servicio-icon">
-                        <i class="fas fa-paint-brush"></i>
-                    </div>
+                        <div class="servicio-icon">
+                            <svg class="icon" aria-hidden="true"><use href="#icon-paint-brush"></use></svg>
+                        </div>
                     <h3>Uñas Esculpidas</h3>
                     <p>Extensiones de gel que dan forma y longitud perfecta a tus uñas</p>
                     <div class="servicio-price">Desde $8.000</div>
                 </div>
                 <div class="servicio-card">
                     <div class="servicio-icon">
-                        <i class="fas fa-gem"></i>
+                            <svg class="icon" aria-hidden="true"><use href="#icon-gem"></use></svg>
                     </div>
                     <h3>Kapping</h3>
                     <p>Refuerzo natural que fortalece y protege tus uñas</p>
@@ -82,7 +128,7 @@
                 </div>
                 <div class="servicio-card">
                     <div class="servicio-icon">
-                        <i class="fas fa-palette"></i>
+                            <svg class="icon" aria-hidden="true"><use href="#icon-palette"></use></svg>
                     </div>
                     <h3>Semipermanentes</h3>
                     <p>Esmaltado duradero que mantiene tu manicura perfecta por semanas</p>
@@ -90,7 +136,7 @@
                 </div>
                 <div class="servicio-card">
                     <div class="servicio-icon">
-                        <i class="fas fa-spa"></i>
+                            <svg class="icon" aria-hidden="true"><use href="#icon-spa"></use></svg>
                     </div>
                     <h3>Belleza de Pies</h3>
                     <p>Pedicura completa con exfoliación, masaje y esmaltado</p>
@@ -98,7 +144,7 @@
                 </div>
                 <div class="servicio-card">
                     <div class="servicio-icon">
-                        <i class="fas fa-star"></i>
+                            <svg class="icon" aria-hidden="true"><use href="#icon-star"></use></svg>
                     </div>
                     <h3>Diseños Especiales</h3>
                     <p>Arte en uñas con técnicas avanzadas y diseños personalizados</p>
@@ -106,7 +152,7 @@
                 </div>
                 <div class="servicio-card">
                     <div class="servicio-icon">
-                        <i class="fas fa-heart"></i>
+                            <svg class="icon" aria-hidden="true"><use href="#icon-heart"></use></svg>
                     </div>
                     <h3>Tratamientos</h3>
                     <p>Hidratación profunda y cuidado especializado para tus manos</p>
@@ -126,7 +172,10 @@
             <div class="accesorios-grid">
                 <div class="accesorio-card">
                     <div class="accesorio-image">
-                        <img src="https://images.unsplash.com/photo-1605100804763-247f67b3557e?w=400&h=200&fit=crop&crop=center" alt="Anillos elegantes de oro y plata" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1605100804763-247f67b3557e?w=400&h=200&fit=crop&crop=center" 
+                             srcset="https://images.unsplash.com/photo-1605100804763-247f67b3557e?w=800&h=400&fit=crop 800w, https://images.unsplash.com/photo-1605100804763-247f67b3557e?w=400&h=200&fit=crop 400w"
+                             sizes="(min-width: 900px) 350px, (min-width: 600px) 45vw, 100vw"
+                             alt="Anillos elegantes de oro y plata" loading="lazy">
                     </div>
                     <div class="accesorio-info">
                         <h3>Anillos Elegantes</h3>
@@ -136,7 +185,10 @@
                 </div>
                 <div class="accesorio-card">
                     <div class="accesorio-image">
-                        <img src="https://images.unsplash.com/photo-1515562141207-7a88fb7ce338?w=400&h=200&fit=crop&crop=center" alt="Collares sofisticados de perlas y oro" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1515562141207-7a88fb7ce338?w=400&h=200&fit=crop&crop=center"
+                             srcset="https://images.unsplash.com/photo-1515562141207-7a88fb7ce338?w=800&h=400&fit=crop 800w, https://images.unsplash.com/photo-1515562141207-7a88fb7ce338?w=400&h=200&fit=crop 400w"
+                             sizes="(min-width: 900px) 350px, (min-width: 600px) 45vw, 100vw"
+                             alt="Collares sofisticados de perlas y oro" loading="lazy">
                     </div>
                     <div class="accesorio-info">
                         <h3>Collares Sofisticados</h3>
@@ -146,7 +198,10 @@
                 </div>
                 <div class="accesorio-card">
                     <div class="accesorio-image">
-                        <img src="https://images.unsplash.com/photo-1611591437281-460bfbe1220a?w=400&h=200&fit=crop&crop=center" alt="Pulseras delicadas de plata y gemas" loading="lazy">
+                        <img src="https://images.unsplash.com/photo-1611591437281-460bfbe1220a?w=400&h=200&fit=crop&crop=center"
+                             srcset="https://images.unsplash.com/photo-1611591437281-460bfbe1220a?w=800&h=400&fit=crop 800w, https://images.unsplash.com/photo-1611591437281-460bfbe1220a?w=400&h=200&fit=crop 400w"
+                             sizes="(min-width: 900px) 350px, (min-width: 600px) 45vw, 100vw"
+                             alt="Pulseras delicadas de plata y gemas" loading="lazy">
                     </div>
                     <div class="accesorio-info">
                         <h3>Pulseras Delicadas</h3>
@@ -166,27 +221,27 @@
                     <h2 class="section-title">Reserva tu Turno</h2>
                     <p class="section-subtitle">Estamos aquí para hacerte sentir única y hermosa</p>
                     <div class="contacto-details">
-                        <div class="contacto-item">
-                            <i class="fas fa-phone"></i>
-                            <div>
-                                <h4>Teléfono</h4>
-                                <p>+54 9 11 1234-5678</p>
+                            <div class="contacto-item">
+                                <svg class="icon" aria-hidden="true"><use href="#icon-phone"></use></svg>
+                                <div>
+                                    <h4>Teléfono</h4>
+                                    <p>+54 9 11 1234-5678</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="contacto-item">
-                            <i class="fas fa-envelope"></i>
-                            <div>
-                                <h4>Email</h4>
-                                <p>hola@esteticabella.com</p>
+                            <div class="contacto-item">
+                                <svg class="icon" aria-hidden="true"><use href="#icon-envelope"></use></svg>
+                                <div>
+                                    <h4>Email</h4>
+                                    <p>hola@esteticabella.com</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="contacto-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <div>
-                                <h4>Ubicación</h4>
-                                <p>Av. Corrientes 1234, CABA</p>
+                            <div class="contacto-item">
+                                <svg class="icon" aria-hidden="true"><use href="#icon-map-marker"></use></svg>
+                                <div>
+                                    <h4>Ubicación</h4>
+                                    <p>Av. Corrientes 1234, CABA</p>
+                                </div>
                             </div>
-                        </div>
                     </div>
                 </div>
                 <form class="contacto-form">
@@ -221,18 +276,18 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <i class="fas fa-gem"></i>
+                    <svg class="icon" aria-hidden="true"><use href="#icon-gem"></use></svg>
                     <span>Estética Bella</span>
                 </div>
                 <div class="footer-social">
                     <a href="#" class="social-link" aria-label="Instagram">
-                        <i class="fab fa-instagram"></i>
+                        <svg class="icon" aria-hidden="true"><use href="#icon-instagram"></use></svg>
                     </a>
                     <a href="#" class="social-link" aria-label="Facebook">
-                        <i class="fab fa-facebook"></i>
+                        <svg class="icon" aria-hidden="true"><use href="#icon-facebook"></use></svg>
                     </a>
                     <a href="#" class="social-link" aria-label="TikTok">
-                        <i class="fab fa-tiktok"></i>
+                        <svg class="icon" aria-hidden="true"><use href="#icon-tiktok"></use></svg>
                     </a>
                 </div>
             </div>
